was learn with border css

--- a/learncss.html
+++ b/learncss.html
@@ -5,12 +5,25 @@
         <title>Learn CSS</title>
         <style>
             body{
-                background-color: yellow;
+                /*this isi using rgb*/
+                /*background-color: rgb(238,130, 238);*/
+                /*this is using HEX*/
+                background-color: #ffa50f;
+
+            }
+            h1{
+                background-color: aqua;
+                border: 5px solid tomato;
+            }
+            h2{
+                border-style: dotted;
+                border-color: violet;
             }
         </style>
     </head>
     <body>
         <h1 style="color: red; text-align: center;">Learn CSS is really fun!</h1>
         <p>My name is Vramsjon Piter Hutagalung</p>
+        <h2>Learnign CSS Border</h2>
     </body>
 </html>
